fixed alert screen on mobile

--- a/styles.css
+++ b/styles.css
@@ -132,14 +132,15 @@
   }
 }
 
-@media only screen and (max-width: 900px){
+@media only screen and (max-width: 760px){
   .alert img{
-    width: auto;
-    height: 101vh;
+    width: 100vw;
+    height: auto;
     display: block;
     margin-top: -59vh;
     z-index: 10;
   }
+
   .dice img{
     z-index: -1;
   }
